[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["martins0n <martinmail@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.17"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.9.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
jaxlib = "^0.1.69"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
