[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["martins0n <martinmail@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.17"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.9.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
jaxlib = "^0.1.69"
pandas = "^1.3.2"
pyyaml = "^5.4.1"
requests = "^2.26.0"
crowd-kit = "^0.0.7"
gluonts = "^0.8.1"
pytorch-lightning = "^1.5.9"
ujson = "^5.1.0"
ipykernel = "^6.7.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
