[tool.poetry]
name = "ssm"
version = "0.1.0"
description = ""
authors = ["martins0n <33594071+martins0n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.14"
flax = "^0.7.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
celluloid = "^0.2.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
